@@ -433,8 +433,8 @@ Misc
 |v	|Show version.
 |o	|Open option menu
 |.	|Toggle line numbers on/off.
-|D	|Toggle date display on/off.
-|A	|Toggle author display on/off.
+|D	|Toggle date display on/off/relative.
+|A	|Toggle author display on/off/abbreviated.
 |g	|Toggle revision graph visualization on/off.
 |F	|Toggle reference display on/off (tag and branch names).
 |:	|Open prompt. This allows you to specify what git command
