@@ -17,6 +17,7 @@ Improvements:
    %(file) works as expected.
  - Branch view: add entry to browse all branches (uses git-log's --all
    flag).
+ - Abbreviation of author names can now be configured and toggled.
 
 Bug fixes:
 
